src/objects/Transaction_Log__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Transaction log description</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <label>Error #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Severity__c</fullName>
        <label>Error Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <description>Log date, current date upon insert</description>
        <label>Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <referenceTo>Transactions__c</referenceTo>
        <relationshipName>Transaction_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Transaction_Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be populated when an error is returned for a specific Transaction Item</description>
        <label>Transaction Item</label>
        <referenceTo>Transaction_Items__c</referenceTo>
        <relationshipLabel>Transaction Logs</relationshipLabel>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Item_Link__c</fullName>
        <formula>IF ( ISBLANK ( Transaction_Item_ID__c ), NULL, &quot;https://sjm--qa.cs17.my.salesforce.com/&quot;&amp;Transaction_Item_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Item Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Transaction Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>